--- a/Практикум5.ipynb
+++ b/Практикум5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "id": "89800a3b",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Рейс', '365', 'прибыл', 'из', 'Сасово', 'в', '12:56:30'] тест0\n",
-      "['сообщение', 'получено', 'в', '12:57:20'] тест1\n",
-      "['Сохранено', 'в', 'базу', 'данных'] тест2\n",
-      "['Рейс', '452', 'прибыл', 'в', 'Сочи', 'в', '13:04:22'] тест3\n",
-      "['сообщение', 'получено', 'в', '13:11:32'] тест4\n",
-      "['Ошибка', 'записи', 'в', 'базу', 'данных'] тест5\n"
+      "['Рейс', '365', 'прибыл', 'из', 'Сасово', 'в', '12:56:30']\n",
+      "['сообщение', 'получено', 'в', '12:57:20']\n",
+      "['Сохранено', 'в', 'базу', 'данных']\n",
+      "['Рейс', '452', 'прибыл', 'в', 'Сочи', 'в', '13:04:22']\n",
+      "['сообщение', 'получено', 'в', '13:11:32']\n",
+      "['Ошибка', 'записи', 'в', 'базу', 'данных']\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
     "        \n",
     "        for i in range(len(text1)):\n",
     "            text1[i] = text1[i].split()\n",
-    "            print(text1[i], f'тест{i}')\n",
+    "            print(text1[i])\n",
     "            for j in range(len(text1[i])):\n",
     "                if text1[i][j]=='Рейс':\n",
     "                    Number_Race = text1[i][j+1]\n",
@@ -47,31 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "a41bcec3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "b = ['365', '123']\n",
-    "'365'== b[0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f1a14427",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d912ed97",
    "metadata": {},
    "outputs": [],
    "source": []
